Finished slug logic in endpoints
